# backbase-assignment

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
assignment/: config.py
assignment/agent/: graph.py  model.py  prompts.py  util.py
assignment/api/: app.py
assignment/api/models/: healthcheck.py  questions.py
assignment/api/routers/: healthcheck.py  questions.py
tests/: conftest.py  test_healthcheck.py  test_questions.py
